umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_pr+4.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {:output {:atoms ["Pr#c+4#u"] :bonds []} :success true :tie-breaks []}
  :atom-typing-strict {:output {:atoms ["Pr#c+4#u"] :bonds []} :success true :tie-breaks []}
  :counts-most-saturated {:output {:atoms ["Pr#c+4#u"] :bonds []} :success true :tie-breaks []}
  :counts-strict {:output {:atoms ["Pr#c+4#u"] :bonds []} :success true :tie-breaks []}}
