umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_pt+2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {:output {:atoms ["Pt#c+2#n4"] :bonds []} :success true :tie-breaks []}
  :atom-typing-strict {:output {:atoms ["Pt#c+2#n4"] :bonds []} :success true :tie-breaks []}
  :counts-most-saturated {:output {:atoms ["Pt#c+2#n4"] :bonds []} :success true :tie-breaks []}
  :counts-strict {:output {:atoms ["Pt#c+2#n4"] :bonds []} :success true :tie-breaks []}}
