umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_pu+3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["Pu#c+3#u5"] :bonds [] :charge 3 :spin "#u5#s6"}
    :success true}
  :counts {
    :output {:atoms ["Pu#c+3#n2#u"] :bonds [] :charge 3 :spin "#u1#s2"}
    :success true}}
