umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_pu+5.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["Pu#c+5#u3"] :bonds []} :success true}
  :counts {:output {:atoms ["Pu#c+5#n#u"] :bonds []} :success true}}
