umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_pu+6.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {:output {:atoms ["Pu#c+6#u2"] :bonds []} :success true :tie-breaks []}
  :atom-typing-strict {:output {:atoms ["Pu#c+6#u2"] :bonds []} :success true :tie-breaks []}
  :counts-most-saturated {:output {:atoms ["Pu#c+6#n"] :bonds []} :success true :tie-breaks []}
  :counts-strict {:output {:atoms ["Pu#c+6#n"] :bonds []} :success true :tie-breaks []}}
